app-config/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${name}
  namespace: ${namespace}
spec:
  selector: 
    app: ${name}
  ports:
    - name: web
      protocol: TCP
      port: ${*port}
